testsuite/tests/iterators/invalid_iterator/foo.lkt
import lexer_example
grammar foo_grammar {
    @main_rule main_rule <- Example("example")

}

class FooNode implements Node[FooNode] {
}

class Example : FooNode {

    @export fun get_lit(): Int = 2

    @export fun values_iterator(): Iterator[Int] =
    node.get_lit().to_iterator()
}
